--- a/LogisticsInvoiceCalculatorApi/LogisticsInvoiceCalculatorApi.csproj
+++ b/LogisticsInvoiceCalculatorApi/LogisticsInvoiceCalculatorApi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Carter" Version="8.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.21" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
